--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "-Node \r -Express \r -MySQL \r -Handlebars \r -Jquery",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,13 @@
     "express-handlebars": "^3.0.0",
     "mysql": "^2.16.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Robmgraham/Good-Burger.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Robmgraham/Good-Burger/issues"
+  },
+  "homepage": "https://github.com/Robmgraham/Good-Burger#readme"
 }
